--- a/TravelApp/Base.lproj/Map~.storyboard
+++ b/TravelApp/Base.lproj/Map~.storyboard
@@ -22,7 +22,7 @@
                     <connections>
                         <segue destination="Kxs-g7-lYe" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                         <segue destination="lwk-aL-MeI" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
-                        <segue destination="Eab-ur-eSc" kind="relationship" relationship="viewControllers" id="JpC-MF-jyu"/>
+                        <segue destination="4xb-2a-Yz3" kind="relationship" relationship="viewControllers" id="cro-Vh-J2l"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
@@ -32,10 +32,11 @@
         <!--First-->
         <scene sceneID="bjL-OL-GMr">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dxd-D1-WtS" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Kxs-g7-lYe" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="First" image="first" id="acW-dT-cKf"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="7V5-Uk-Hs5">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="7V5-Uk-Hs5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -44,17 +45,17 @@
                         <segue destination="5Fe-KI-0Bl" kind="relationship" relationship="rootViewController" id="rl0-Zf-JJx"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dxd-D1-WtS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="950" y="-955"/>
         </scene>
         <!--Second-->
         <scene sceneID="FeP-6e-cNh">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="R0O-Ml-4Og" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="lwk-aL-MeI" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Second" image="second" id="cPa-gy-q4n"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="bKY-aM-YBB">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="bKY-aM-YBB">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -63,28 +64,8 @@
                         <segue destination="Lf9-HP-Xc2" kind="relationship" relationship="rootViewController" id="rbh-co-x5N"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="R0O-Ml-4Og" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="950" y="598"/>
-        </scene>
-        <!--Third-->
-        <scene sceneID="aEr-os-bTa">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Eab-ur-eSc" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Third" id="x8j-Cs-fG3"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="1HR-2s-lov">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="w97-Q2-dLX" kind="relationship" relationship="rootViewController" id="Gok-rM-UHG"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="07n-wf-xus" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="950" y="-193"/>
+            <point key="canvasLocation" x="950" y="581"/>
         </scene>
         <!--Tag-->
         <scene sceneID="Xej-pG-bjp">
@@ -104,17 +85,44 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YVf-0c-pDE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1895" y="597"/>
+            <point key="canvasLocation" x="1870" y="580"/>
         </scene>
-        <!--Map-->
-        <scene sceneID="dzg-xb-hQe">
+        <!--Item-->
+        <scene sceneID="62P-UO-UM0">
             <objects>
-                <viewControllerPlaceholder storyboardName="Map" id="w97-Q2-dLX" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="o6t-bo-Gu4"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="XYn-Pg-fv1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController id="4xb-2a-Yz3" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="C8N-wZ-jod"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="Mj1-MH-XzJ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="MDP-eq-TS1" kind="relationship" relationship="rootViewController" id="fJl-kF-EPm"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RmB-FA-ID2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1896" y="-194"/>
+            <point key="canvasLocation" x="950" y="-100"/>
+        </scene>
+        <!--Map View Controller-->
+        <scene sceneID="eeR-lD-3Ak">
+            <objects>
+                <viewController id="MDP-eq-TS1" customClass="MapViewController" customModule="TravelApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="rhL-hl-0q0"/>
+                        <viewControllerLayoutGuide type="bottom" id="F3l-Vg-zLL"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fDs-v2-weY">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Z4i-NL-h59"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5nG-EA-2eu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1809" y="-100"/>
         </scene>
     </scenes>
     <resources>
