--- a/TravelApp/Cart.storyboard
+++ b/TravelApp/Cart.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ig1-XC-fuU">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,22 +10,31 @@
     </dependencies>
     <scenes>
         <!--Cart View Controller-->
-        <scene sceneID="DqU-B4-TsG">
+        <scene sceneID="pYb-rf-3Fe">
             <objects>
-                <viewController id="fD6-Ri-DPm" customClass="CartViewController" sceneMemberID="viewController">
+                <viewController id="ig1-XC-fuU" customClass="CartViewController" customModule="TravelApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="AVO-nk-zwV"/>
-                        <viewControllerLayoutGuide type="bottom" id="3Vc-Sx-N4B"/>
+                        <viewControllerLayoutGuide type="top" id="ydI-9Q-ReE"/>
+                        <viewControllerLayoutGuide type="bottom" id="c90-MP-dZq"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="GXg-9n-Eqd">
+                    <view key="view" contentMode="scaleToFill" id="Fcl-jv-grh">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Cart View Controller" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tLb-Sq-tvy">
+                                <rect key="frame" x="102" y="159" width="171" height="53"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="JoZ-4L-16f" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9g5-89-P2L" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-44" y="10"/>
+            <point key="canvasLocation" x="61.600000000000001" y="-295.50224887556226"/>
         </scene>
     </scenes>
 </document>
